--- a/index.html
+++ b/index.html
@@ -28,17 +28,26 @@
 					<h1>Technical</h1>
 					<p>Etch Vision Day 2016</p>
 				</section>
-				<section data-background="http://www.georgjensen.com/~/productimages/1200/0/0/3587523/KOPPEL-22-cm-wall-clock-copper-with-white-dial.png">
-					<h1>A look back...</h1>
+				<section data-background="https://i.ytimg.com/vi/o-H5W5cHt-8/maxresdefault.jpg">
+					<h1>The numbers</h1>
 					<ul>
-					<li class="fragment">Running Umbraco sites: <span style="color: #e02c8f">TODO</span></li>
-					<li class="fragment">LOC committed: <span style="color: #e02c8f">NNNN</span></li>
-					<li class="fragment">Most commits: <span class="fragment" style="color: #e02c8f">newnab</span></li>
+					<li class="fragment">Running Umbraco sites: <span style="color: #e02c8f; font-weight: 700">75</span></li>
+					
+					<li class="fragment">Total commits: <span style="color: #e02c8f; font-weight: 700">12,071</span></li>
+					<li class="fragment">Lines committed: <span style="color: #e02c8f; font-weight: 700">&quot;millions&quot;</span></li>
+					<li class="fragment">"Fix" committed: <span style="color: #e02c8f; font-weight: 700">630</span></li>
+					<li class="fragment">Most commits: <span style="color: #e02c8f; font-weight: 700">niallmccabe (3,075)</span><br/>
+						<img src="http://www.howardism.org/Technical/Git/img/bad-git-commit-example.png"></li>
 					</ul>
-					<aside class="notes">Because everyone loves the numbers</aside>
+					<aside class="notes">
+						Because everyone loves the numbers<br/>
+						Top "fixer" - me (130)<br/>
+						3rd place Adam (1394)
+						2nd place Kamila (2588)
+					</aside>
 				</section>
 
-				<section>
+				<section data-background="https://melaloo.files.wordpress.com/2015/08/swissknife.png">
 					<h1>Stacks</h1>
 					<p>Last year I said...</p>
 					<div class="fragment">
@@ -50,20 +59,24 @@
 						<p>Uhh...</p>
 					</div>
 					<h3 class="fragment">But didn't predict...</p>
+					<aside class="notes">
+						Let's not forget U sites; Lascar, Eq X7
+					</aside>
 				</section>
 				<section data-background="https://upload.wikimedia.org/wikipedia/commons/5/57/React.js_logo.svg">			
 						<h2>ReactJS</h2>
 						<p>Coral EPOS</p>
 						<p>Old Mutual Wealth Prosperity</p>
 						<p>i2O Water</p>
-					<aside class="notes">Which proves you can't predict anything in this game</aside>
+					<aside class="notes">Which proves you can't predict anything in this game<br/>
+					Our biggest, and most profitable!</aside>
 				</section>
 
-				<section>
+				<section data-background="http://winsupersite.com/site-files/winsupersite.com/files/imagecache/large_img/uploads/2015/12/mia.jpg">
 						<h2>But what happened to?</h2>
 						<h3>Bots</h3>
 						<h3>Blockchain</h3>
-						<p class="fragment">They haven't gone away, we just haven't seen them</p>
+						<p>They haven't gone away, we just haven't seen them</p>
 						<aside class="notes">
 							For those with a good memory</br>
 							Adam bots in SummerSummit<br/>
@@ -88,7 +101,7 @@
 					</div>
 					<aside class="notes">
 						Not bare Wordpress<br/>
-						TypeScript vs ES6<br/>
+						JS: TypeScript vs ES6<br/>
 						U8 = not like change to v7 was, mostly builds on it<br/>
 					</aside>
 				</section>
@@ -113,6 +126,8 @@
 							</ul>
 							<aside class="notes">
 								Think we saw some of the benefits, but also bought challenges<br/>
+								Outsourced disconnected = bad<br/>
+								Logical that connected = good<br/>
 							</aside>
 						</section>
 
@@ -179,7 +194,7 @@
 								<li class="fragment fade-up" data-autoslide="2000">Simplicity</li>
 							</ul>
 						</section>
-						<section data-background="https://upload.wikimedia.org/wikipedia/commons/1/1f/V-2_rocket_diagram_(with_English_labels).svg">
+						<section data-background="http://i.imgur.com/Vue3t.jpg">
 							<h2>Simplicity</h2>
 							<ul>
 								<li>Delivering MVP</li>
@@ -187,6 +202,7 @@
 								<li>Smart solutions, not smart technology</li>
 							</ul>
 							<aside class="notes">
+								Confucious: Life is really simple, but we insist on making it complicated
 								Without losing the "being clever"<br/>
 								Don't fall down the rabbit hole<br/>
 								*Think*
